--- a/implementation.tex
+++ b/implementation.tex
@@ -3,7 +3,12 @@
 \chapter{System development}
 With both the technical and project management groundwork in place, we were able to commence development of the URSA system. This chapter outlines, in a relatively fixed chronological order, the activities undertaken in pursuance of each of the milestones previously enumerated. \\
 
-While we were unable to achieve every milestone originally proposed, we were able to demonstrate a successful, autonomous prototype. This chapter charts the course we took to achieve that prototype.
+While we were unable to achieve every milestone originally proposed, we were able to demonstrate a successful, autonomous prototype. This chapter charts the course we took to achieve that prototype.\\
+
+
+Having agreed on the requirements, scope, and conduct of the project to a satisfactory level of detail, we were able to move onto the selection of the core technologies which would allow URSA to fly. This chapter deals with our deep dive review of these technologies, and the components which were eventually selected. At the end of this chapter, we bring together each of the components discussed and present a block diagram of our initial proposed design for URSA.\\
+
+In the design of any complex system, there are a range of design patterns from the literature or previous works which can be repurposed or adapted to speed in the deployment of the new system. Where possible, we have attempted to adopt or extend existing technologies, since doing so allows us to achieve more in less time. In some cases, we have been required to develop our own solutions. It is clearly indicated throughout this chapter which aspects are our own design, and which have been adapted from the work of others.
 \pagebreak
 
 \section{Construction of URSA}
