--- a/capstone_report.tex
+++ b/capstone_report.tex
@@ -107,7 +107,8 @@
 \subfile{implementation.tex}
 \subfile{results.tex}
 
-
+\bibliography{capstone_bib}{}
+\bibliographystyle{IEEEtran}
 
 \appendix
 \appendixpage
@@ -125,35 +126,5 @@
 % \includepdf[pages=-]{appendices/MPU9250.pdf}
 % \chapter{ADS1115 datasheet}
 % \includepdf[pages=-]{appendices/ADS1115.pdf}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
- 
-
-
-
-
-
-
-
-
-
-
 
 \end{document}
