- Added diagrams and algorithm to implementation - began testing section

--- a/capstone_report.tex
+++ b/capstone_report.tex
@@ -10,6 +10,7 @@
 \renewcommand{\arraystretch}{1.5}
 \usepackage{bm}
 \usepackage{graphicx}
+\usepackage[]{algorithm2e}
 \usepackage{pgfplots}
 \usepackage{afterpage}
 \pgfplotsset{compat=1.12}
@@ -109,10 +110,10 @@
 
 
 
-\appendix
-\appendixpage
-\chapter{Bill of Materials}
-\includepdf[pages=-]{appendices/bom.pdf}
+% \appendix
+% \appendixpage
+% \chapter{Bill of Materials}
+% \includepdf[pages=-]{appendices/bom.pdf}
 % \chapter{BCM2835 ARM Peripherals datasheet}
 % \includepdf[pages=-]{appendices/BCM2835-ARM-Peripherals.pdf}
 % \chapter{HC-SR04 datasheet}
