Point 3 of revision plan by LD

--- a/capstone_bib.bib
+++ b/capstone_bib.bib
@@ -98,3 +98,93 @@
   year          = "2008",
   pages         = "932"
 }
+
+@inproceedings{hong,
+  author =       "Soonhac Hong and Cang Ye",
+  title =        {{A pose graph based visual SLAM algorithm for robot pose estimation}},
+  doi =          {10.1109/WAC.2014.6936197},
+  crossref =	{WAC:2014}
+}
+
+@proceedings{WAC:2014,
+  title =        "World Automation Congress (WAC)",
+  booktitle =     "World Automation Congress (WAC)",
+  publisher =    {IEEE},
+  year =         {2014},
+  isbn =		{978-1-8893-3549-0},
+  venue = {Waikoloa, HI, USA}
+}
+
+@inproceedings{vysotska,
+  author =       "Olga Vysotska and Cyrill Stachniss",
+  title =        {{Exploiting building information from publicly available maps in graph-based SLAM}},
+  doi =          {10.1109/IROS.2016.7759664},
+  crossref =	{IRS:2016}
+}
+
+@proceedings{IRS:2016,
+  title =        "Intelligent Robots and Systems (IROS)",
+  booktitle =     "Intelligent Robots and Systems (IROS)",
+  publisher =    {IEEE},
+  year =         {2016},
+  isbn =		{978-1-5090-3762-9},
+  venue = {Daejeon, South Korea}
+}
+
+@inproceedings{annaiyan,
+  author =       "Arun Annaiyan, Miguel Olivares-Mendez and Holger Voos",
+  title =        {{Real-time graph-based SLAM in unknown environments using a small UAV}},
+  doi =          {10.1109/ICUAS.2017.7991524},
+  crossref =	{ICUAS:2017}
+}
+
+@proceedings{ICUAS:2017,
+  title =        "International Conference on Unmanned Aircraft Systems",
+  booktitle =     "International Conference on Unmanned Aircraft Systems",
+  publisher =    {IEEE},
+  year =         {2017},
+  isbn =		{978-1-5090-4495-5},
+  venue = {Miami, FL, USA}
+}
+
+@article{grisetti,
+  author        = "Georgio Grisetti, Rianer Kummerle, Cyrill Stachniss and Wolfram Burgand",
+  title         = {{A Tutorial on Graph-Based SLAM}},
+  journal       = "IEEE Intelligent Transportation Systems Magazine",
+  volume        = "2",
+  number = {4},
+  year          = "2010",
+  pages         = "31-43"
+}
+
+@inproceedings{saengphet,
+  author =       "Watcharapol Saengphet and others",
+  title =        {{Implementation of system identification and flight control system for UAV}},
+  doi =          {10.1109/ICCAR.2017.7942783},
+  crossref =	{ICCAR:2017}
+}
+
+@proceedings{ICCAR:2017,
+  title =        "International Conference on Control, Automation and Robotics",
+  booktitle =     "International Conference on Control, Automation and Robotics",
+  publisher =    {IEEE},
+  year =         {2017},
+  isbn =		{978-1-5090-6088-7},
+  venue = {Nagoya, Japan}
+}
+
+@inproceedings{wang,
+  author =       "Ya Wang and others",
+  title =        {{Neural network adaptive inverse model control method for quadrotor UAV}},
+  doi =          {10.1109/ChiCC.2016.7553921},
+  crossref =	{CCC:2017}
+}
+
+@proceedings{CCC:2017,
+  title =        "Chinese Control Conference",
+  booktitle =     "Chinese Control Conference",
+  publisher =    {IEEE},
+  year =         {2016},
+  isbn =		{978-9-8815-6391-0},
+  venue = {Chengdu, China}
+}
