--- a/capstone_report.tex
+++ b/capstone_report.tex
@@ -1,4 +1,4 @@
-\documentclass{report}
+\documentclass[12pt]{report}
 \title{Capstone Project - RR4-IP \\Unmanned Recon and Surveillance Aircraft (U.R.S.A.) \\ \Huge Draft Report}
 \author{\large Lachlan Dowling - 682434 \\ Isaac Hook - 720679 \\ Hao Tang - 640207 }
 \date{2017}
@@ -30,6 +30,7 @@
 \usepackage{pdflscape}
 \usepackage{appendix}
 \usepackage{subfiles}
+\usepackage{setspace}
 \usepackage[americancurrents, americanvoltages,siunitx]{circuitikz}
 \pagestyle{fancy}
 \fancyhf{}
@@ -85,6 +86,7 @@
 \setlength{\parsep}{\parskip}%
 }%
 \item[]}{\end{list}}
+\onehalfspacing
 
 \begin{document}
 \thispagestyle{empty}
